--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+csv filter=lfs diff=lfs merge=lfs -text
 *.csv--include-ref=refs/heads/main filter=lfs diff=lfs merge=lfs -text
 train/train.csv filter=lfs diff=lfs merge=lfs -text
 data/raw/processed/cleaned_data.csv filter=lfs diff=lfs merge=lfs -text
