--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ﻿DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=nyc_taxi_db
-DB_USER=root
-DB_PASSWORD=
+DB_USER=frank
+DB_PASSWORD=Dowdeswell@0014
 FLASK_ENV=development
-PORT=5000
+PORT=3306
