--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "5000:5000"
     depends_on:
       - db
-
+    command: python app.py
   frontend:
     build: ./frontend
     container_name: nyc_taxi_frontend
