--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,52 @@
+version: '3.8'
+
 services:
-  db:
+  mysql:
     image: mysql:8.0
     container_name: nyc_taxi_db
     restart: always
-    env_file:
-      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "3306:3306"
+      - "${DB_PORT}:3306"
     volumes:
       - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     build: ./backend
     container_name: nyc_taxi_backend
     restart: always
-    env_file:
-      - .env
+    environment:
+      MYSQL_HOST: ${DB_HOST}
+      MYSQL_PORT: 3306
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      FLASK_ENV: ${FLASK_ENV}
     ports:
       - "5000:5000"
     depends_on:
-      - db
+      mysql:
+        condition: service_healthy
     command: python app.py
+
   frontend:
     build: ./frontend
     container_name: nyc_taxi_frontend
     restart: always
     ports:
       - "80:80"
+    depends_on:
+      - backend
+
+volumes:
+  mysql_data:
