updated all dockers and app

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,23 @@
-# Use Python base image
-FROM python:3.13-slim
+# Use official Python image
+FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install
-COPY ../requirements.txt .
+# Copy requirements first for caching
+COPY backend/requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy backend code
-COPY . .
+COPY backend/ .
 
 # Expose port
 EXPOSE 5000
 
-# Command to run the app
+# Set environment variables (optional fallback)
+ENV FLASK_ENV=development
+
+# Run the backend
 CMD ["python", "app.py"]
