--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,14 @@
+# Use Nginx to serve static files
 FROM nginx:alpine
 
-# Remove default html
+# Remove default nginx static files
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copy frontend code
-COPY . /usr/share/nginx/html
+# Copy frontend build files to nginx folder
+COPY frontend/ /usr/share/nginx/html/
 
-# Expose port
+# Expose port 80
 EXPOSE 80
+
+# Start Nginx server
+CMD ["nginx", "-g", "daemon off;"]
