--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
       retries: 5
 
   backend:
-    build: ./backend
+    build: 
+      context: .
+      dockerfile: backend/Dockerfile
     container_name: nyc_taxi_backend
     restart: always
     environment:
@@ -43,7 +45,9 @@ services:
     command: python app.py
 
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
     container_name: nyc_taxi_frontend
     restart: always
     ports:
