--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,17 @@
-# Use Nginx to serve static files
+# Use official Nginx image
 FROM nginx:alpine
 
-# Remove default nginx static files
+# Remove default Nginx static files
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copy frontend build files to nginx folder
+# Copy frontend files to Nginx
 COPY frontend/ /usr/share/nginx/html/
+
+# Copy custom Nginx config
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
 
-# Start Nginx server
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
